--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,6 @@ services:
     region: ohio
     plan: starter
     branch: testing-testing
-    rootDir: service
     healthCheckPath: /health
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app
+    startCommand: uvicorn service.main:app
