--- a/service/starters/valid_one.yaml
+++ b/service/starters/valid_one.yaml
@@ -1,20 +1,22 @@
 - type: textarea
-  name: bio
+  id: bio
   attributes:
     label: Author Bio
     description: Tell us a bit about yourself
     placeholder: "I am a poet that writes..."
-  validations:
-    required: false
 - type: dropdown
-  name: rights
+  id: rights
   attributes:
     label: What rights do you own for your work?
     description: We need to be aware of the publication rights that exist for this work.
-    multiple: false
     options:
       - label: Full rights
       - label: Partial rights
       - label: Other party has rights
-  validations:
-    required: true
+- type: checkbox
+  id: checkbox-1
+  attributes:
+    label: Code of Conduct
+    description: The Code of Conduct helps create a safe space for everyone. We require that everyone agrees to it.
+    options:
+      - label: I agree to follow this project's Code of Conduct
